[package]
name = "skydbcore"
version = "0.0.1-alpha"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
bincode = "1.0"
regex = "1.5.4"

[lib]
crate-type = ["cdylib", "lib"]
name = "skydbcore"
src = "src/lib.rs"


